syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/techschool/simplebank/pb";

message CreateUserRequest {
    string username = 1;
    optional int64 provid = 2;
}

message CreateUserResponse {
    User user = 1;
}
